# codeRepo

./: .clang-format  .clang-tidy  .clangd  .gitignore  0_todo.md  1_digest.md  1_notes.md  2_done.md  2_quiz.md  3_book.md  3_inter.md  3_interview.md  BIM的cpp代码风格考核.md  CMakeLists.txt  bak.cpp  index.html  main.cpp  todo.md  xxx.md  复习文档.md  视角设计方案.md  面经整理发布版.md
1_notes/: business.md  notets.md  terms.md  vocabulary.md
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/: CMakeLists.txt  README.md  makefile
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/2_hello_triangle/1_triangle/: main.cpp
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/3_shaders/1_shader_updating/: main.cpp
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/3_shaders/2_shader_interpolating/: main.cpp
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/3_shaders/3_shader_from_file/: shader.fs  shader.vs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/4_textures/1_one_texture/: shader.fs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/4_textures/2_two_textures/: main.cpp
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/5_transformations/: shader.vs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/6_coordinate_systems/1_single_plane/: main.cpp  shader.vs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/7_camera/1_automatic_camera/: main.cpp  shader.fs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/1_getting_started/7_camera/2_manual_camera/: main.cpp
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/2_lighting/1_colors/: main.cpp  shader.fs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/2_lighting/2_basic_lighting/2_diffuse/: main.cpp
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/2_lighting/2_basic_lighting/3_specular/: main.cpp  shader.fs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/2_lighting/3_materials/2_adjusting_light/: main.cpp
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/2_lighting/3_materials/3_changing_color/: main.cpp  shader.vs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/2_lighting/4_lighting_maps/2_specular/: shader.fs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/2_lighting/5_light_casters/1_directional/: main.cpp  shader.fs
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/2_lighting/6_multiple_lights/: main.cpp
1_notes/0_cpp/1_code/14_openmp/opengl_tutorial-master/src/3_model_loading/: main.fs
2_project/1_smallProject/chatRoom_tiny/demo2/: CMakeLists.txt
2_project/1_smallProject/chatRoom_tiny/demo2/client/src/: client.c  myFunction.c  myUI.c
2_project/1_smallProject/chatRoom_tiny/demo2/server/src/: mySQL.c  mySocket.c  myUI.c  server.c
2_project/1_smallProject/miniDB_tutorial/demo3/: CMakeLists.txt
2_project/1_smallProject/miniDB_tutorial/demo3/test/: common.c  function_test.c
2_project/1_smallProject/miniDB_tutorial/demo4/: CMakeLists.txt
2_project/1_smallProject/miniDB_tutorial/demo4/test/: function_test.c
2_project/3_cppProject/12_myAiTetris/: CMakeLists.txt
2_project/3_cppProject/12_myAiTetris/ref/ai_tetris-master/: UpgradeLog2.htm
2_project/3_cppProject/1_threadPool/: CMakeLists.txt  main.cpp
2_project/3_cppProject/1_threadPool/SL_ThreadPool/线程池项目代码/线程池项目/线程池项目/: 线程池项目.vcxproj
2_project/3_cppProject/1_threadPool/SL_ThreadPool/线程池项目代码/线程池项目/线程池项目-最终版/: threadpool.h
2_project/3_cppProject/1_threadPool/myThreadPool/: CMakeLists.txt
2_project/3_cppProject/1_threadPool/myThreadPool/ref/: myThreadpool.h  threadpool.h
2_project/3_cppProject/1_threadPool/myThreadPool/src/: threadPool.cpp
2_project/3_cppProject/1_threadPool/myThreadPool/test/: test.cpp
2_project/3_cppProject/1_threadPool/ref/: 线程池项目测试.cpp
2_project/3_cppProject/1_threadPool/src/: main.cpp  threadPool.cpp
2_project/3_cppProject/1_threadPool/test/: CMakeLists.txt  test_case.cpp
2_project/3_cppProject/1_threadPool/threaPool2/: threadPool2.cpp
2_project/3_cppProject/2_memoryPoolSystem/: CMakeLists.txt  main.cpp  readme.md
2_project/3_cppProject/2_memoryPoolSystem/MemoryPool-master/: .clang-format  example.c  memorypool.c  memorypool.h
2_project/3_cppProject/2_memoryPoolSystem/include/: mps.h
2_project/3_cppProject/2_memoryPoolSystem/mps-master/: readme.txt
2_project/3_cppProject/2_memoryPoolSystem/myMemoryPool/: readme.md
2_project/3_cppProject/2_memoryPoolSystem/myMemoryPool/include/: memorypool.h
2_project/3_cppProject/2_memoryPoolSystem/myMemoryPool/src/: memorypool.cpp
2_project/3_cppProject/2_memoryPoolSystem/myMemoryPoolSystem/: CMakeLists.txt
2_project/3_cppProject/2_memoryPoolSystem/myMemoryPoolSystem/src/: mps.cpp
2_project/3_cppProject/2_memoryPoolSystem/ref/: memorypool.h
2_project/3_cppProject/2_memoryPoolSystem/ref/MemoryPool-master/: README.md  memorypool.c  memorypool.h
2_project/3_cppProject/2_memoryPoolSystem/src/: mps.cpp
2_project/3_cppProject/4_tinytinyDB/demo/demo_0/test/: CMakeLists.txt  test_case1.cpp
2_project/3_cppProject/4_tinytinyDB/demo/demo_0/test/testCase/testCase1/: test_case1.cpp
2_project/3_cppProject/4_tinytinyDB/demo/demo_0/test/testCase/testCase2/: test_case2.cpp
2_project/3_cppProject/9_log/spdlog-1.x/myTest/: CMakeLists.txt  myTest.cpp
3_application/0_Utils/0_cppUtilis/2_cmake/01_cmke_template/: CMakeLists.txt
3_application/0_Utils/0_cppUtilis/2_cmake/6_testPreset/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
3_application/0_Utils/0_cppUtilis/2_cmake/6_testPreset/cmake/: ApplyPreset.cmake  LoadExtLibrary.cmake
3_template/2_qtTemplate/: CMakeLists.txt  main.cpp
3_template/2_qtTemplate/src/: math.cpp
3_template/qtRepo/: CMakeLists.txt
3_template/qtRepo/src/: hello.cpp  main.cpp
99_tmp/tmpProject/: CMakeLists.txt
99_tmp/tmpProject/include/: vector_wrapper.h
99_tmp/tmpProject/src/: file1.cpp  main.cpp
(+2769 files in other folders)
